--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.1.0",
     "next-sitemap": "^4.2.3",
     "nprogress": "^0.2.0",
+    "openai": "^6.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^5.2.8",
