--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-email/components": "^1.0.7",
     "@react-email/render": "^2.0.4",
     "@supabase/ssr": "^0.1.0",
