--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@react-email/render": "^2.0.4",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@types/leaflet.markercluster": "^1.5.6",
     "@types/nprogress": "^0.2.3",
     "@uploadthing/react": "^7.3.3",
     "ai": "^6.0.78",
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "next-sitemap": "^4.2.3",
